# ncurses_game

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: angry.cpp.29C7A1541BA62FBE.idx  common.h.3AE372E2EE75E417.idx  env.cpp.38305C76747AA6C5.idx  env.cpp.6848AF03A4EF537E.idx  env.h.A25FB62B1825DE4B.idx  env.h.CF17C5FF0341126E.idx  fixed.cpp.D3748714BB100051.idx  good.cpp.9DC9BF0DA6E95BCF.idx  inventory.cpp.3C2FBC310A77EC46.idx  item.cpp.3BE3BE587C36353A.idx  item.cpp.4333DBA4E1F82ADA.idx  item.cpp.91CACCF95B036062.idx  main.cpp.B572388AB36CF6BF.idx  main.cpp.D30A81269F2B12DD.idx  map.cpp.303DFE5038FDF049.idx  map.h.5ED81E3F66ABDA09.idx  mapgener.cpp.C7255C5A0F6CFB8F.idx  neutral.cpp.B331CA9DF581FD47.idx  npc.cpp.F440C457E4C4B438.idx  player.cpp.0566E9FABF391F9F.idx  player.h.A8BE5B16C05B07A4.idx  stats.cpp.13DA2D881B21F609.idx  stats.h.3C9C16B5B7285614.idx  tvector.h.5172AFA6C6863F1C.idx
lib/: common.h  tvector.h
lib/extra_class/: map.cpp  map.h  stats.cpp  stats.h
lib/move_obj_class/: player.cpp  player.h
src/: main.cpp
